--- a/glass-ui.less
+++ b/glass-ui.less
@@ -132,6 +132,19 @@
   visibility: visible;
 }
 
+
+//==================================================================================================
+//
+
+.padded{
+  padding: 40px;
+}
+.horizontally-padded{
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+
 //==================================================================================================
 //
 
