--- a/glass-ui.less
+++ b/glass-ui.less
@@ -117,7 +117,26 @@
 
 
 
+//==================================================================================================
+//
 
+unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+selectable {
+  -webkit-touch-callout: all;
+  -webkit-user-select: all;
+  -khtml-user-select: all;
+  -moz-user-select: all;
+  -ms-user-select: all;
+  user-select: all;
+}
 
 //==================================================================================================
 //
