theme.helpers and theme.globals; getOpacity updates

--- a/client/components/recordFooter/recordFooter.html
+++ b/client/components/recordFooter/recordFooter.html
@@ -1,7 +1,7 @@
 
 
 <template name="recordFooter">
-  <footer class="recordFooter" style={{getOpacity}}>
+  <footer class="recordFooter" style="{{getOpacity}}">
     {{#if isUpsert}}
       <button id="saveRecordButton">Save</button>
       {{#if hasId}}
