--- a/client/components/recordHeader/recordHeader.html
+++ b/client/components/recordHeader/recordHeader.html
@@ -1,8 +1,7 @@
 
 
 <template name="recordHeader">
-
-  <header class="recordHeader" style={{getOpacityWithCorner}}>
+  <header class="recordHeader" style="{{getOpacityWithCorner}}">
     {{#if isRecord}}
       <h4 class="recordTitle barcode">{{_id}}</h4>
     {{else}}
